welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:7: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
		gauche();isFacingTrail();
                                      ^SlugSnail:16: error: value c is not a member of object java.awt.Color
	if(getCouleurSol() == Color.c){
                                    ^